--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Nadeem Virtual Assistant</title>
+    <title>Nadeem Assistant</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         * {
@@ -95,7 +96,7 @@
             margin: 0 1vw;
             text-decoration: none;
         }
-        #footer a:hover {
+ #footer a:hover {
             text-decoration: underline;
         }
         .chatbot-container {
