--- a/frontend/index.html
+++ b/frontend/index.html
@@ -191,7 +191,7 @@
             <a href="https://github.com/NadeemMughal" target="_blank" class="button">GitHub</a>
             <p>Published an article on advanced AI techniques.</p>
             <a href="https://arxiv.org/abs/2412.18199" target="_blank" class="button">Read Article</a>
-            <p class="email-display"><strong>nadeem.dev51@gmail.com</strong></p>
+            <p class="email-display"><strong></strong></p>
         </div>
         <div class="chatbot-container p-4">
             <div class="chat-container mb-4">
@@ -208,8 +208,8 @@
     <div id="footer">
         Connect with me:
         <a href="https://www.linkedin.com/in/muhammad-nadeem-ml-engineer-researcher/" target="_blank">LinkedIn</a> |
-        <a href="https://github.com/NadeemMughal" target="_blank">GitHub</a> |
-        <a href="mailto:nadeem.dev51@gmail.com">Contact</a>
+        <a href="https://github.com/NadeemMughal" target="_blank">GitHub</a>
+        //<a href="mailto:nadeem.dev51@gmail.com">Contact</a>
     </div>
 
     <script>
